--- a/Apogos.Tilson.Contact.Plugins.Test/Apogos.Tilson.Contact.Plugins.Test.csproj
+++ b/Apogos.Tilson.Contact.Plugins.Test/Apogos.Tilson.Contact.Plugins.Test.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Apogos.Tilson.Common">
-      <Version>1.1.8.2</Version>
+      <Version>1.1.8.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration">
       <Version>3.1.7</Version>
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContactPluginIntegrationTests.cs" />
+    <Compile Include="ContactPluginUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
