--- a/Apogos.Tilson.Contact.Plugins.Test/Apogos.Tilson.Contact.Plugins.Test.csproj
+++ b/Apogos.Tilson.Contact.Plugins.Test/Apogos.Tilson.Contact.Plugins.Test.csproj
@@ -40,7 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Apogos.Tilson.Common">
+    <PackageReference Include="Apogos.Dynamics.Common">
+      <Version>1.2.0.9</Version>
+    </PackageReference>
+    <PackageReference Include="Apogos.Tilson.Common">
       <Version>1.1.8.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration">
@@ -59,6 +62,12 @@
       <Version>3.1.7</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="System.ServiceModel.Http">
+      <Version>4.7.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.ServiceModel.Primitives">
+      <Version>4.7.0</Version>
+    </PackageReference>
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
